--- a/src/app/features/customers/customers.component.html
+++ b/src/app/features/customers/customers.component.html
@@ -11,8 +11,8 @@
     serviceType: 'customer',
     servicesList:servicesList,
     page:'Customers'
-
   }"
+  [close]="closeFilter"
 (addNewVar)="addNew($event)"
   (deleteSelected)="deleteSelected($event)" >
 
@@ -24,6 +24,12 @@
             </div>
           </div>
         </div>
+
+        <app-filter-options filterOptions
+  [sections]="filterConfig()"
+  (filtersApplied)="applyFilters($event)"
+  (filtersReset)="resetFilters()">
+</app-filter-options>
   </app-layout>
   </div>
 
