--- a/src/app/shared/components/page-controls/page-controls.component.html
+++ b/src/app/shared/components/page-controls/page-controls.component.html
@@ -10,9 +10,6 @@
         </div>
   </div> -->
 
-
-
-
   <nav aria-label="breadcrumb" class="d-inline-block ps-2">
     <ol class="breadcrumb rounded-3 m-0 py-2">
       <li class="breadcrumb-item small">
@@ -35,7 +32,7 @@
         <span class="small">{{'Add new ' + PageControlsComponentData.type | translate}}</span>
       </div>
 
-      <div class="d-flex align-items-center justify-content-center">
+      <div class="d-flex align-items-center justify-content-center" *ngIf="PageControlsComponentData.type != 'category' && PageControlsComponentData.type != 'variant' ">
           <div class="d-flex align-items-center justify-content-between pe-3" (click)="showFilterOptions()">
             <i class="fa-solid fa-filter pe-2 text-muted"></i>
             <span class="fw-light">{{"Filter" | translate}}</span>
