--- a/src/app/shared/components/page-controls/page-controls.component.html
+++ b/src/app/shared/components/page-controls/page-controls.component.html
@@ -32,7 +32,7 @@
         <span class="small">{{'Add new ' + PageControlsComponentData.type | translate}}</span>
       </div>
 
-      <div class="d-flex align-items-center justify-content-center" *ngIf="PageControlsComponentData.type != 'category' && PageControlsComponentData.type != 'variant' ">
+      <div class="d-flex align-items-center justify-content-center" *ngIf="PageControlsComponentData.type != 'category' && PageControlsComponentData.type != 'variant' && PageControlsComponentData.type != 'variant Type' ">
           <div class="d-flex align-items-center justify-content-between pe-3" (click)="showFilterOptions()">
             <i class="fa-solid fa-filter pe-2 text-muted"></i>
             <span class="fw-light">{{"Filter" | translate}}</span>
