--- a/src/app/features/products/components/product-card/product-card.component.html
+++ b/src/app/features/products/components/product-card/product-card.component.html
@@ -107,6 +107,7 @@
             </span>
           </div>
         </div>
+        <div class="text-danger fs-verySmall mt-1">{{categoryErrorMessage | translate}}</div>
       </div>
     </div>
 
