--- a/src/app/features/products/components/product-card/product-card.component.html
+++ b/src/app/features/products/components/product-card/product-card.component.html
@@ -261,7 +261,9 @@
     <!-- Footer -->
     <div class="card-footer py-0">
       <div class="row">
-        <div class="col-6" *ngIf="product.nameEn">
+        <!-- <div class="col-6" *ngIf="product.nameEn"> -->
+          <div class="col-6" *ngIf="product.id != -1">
+
           <div
             class="d-flex align-items-center justify-content-center border-end py-2">
             <span class="fs-verySmall pe-2">{{ 'More' | translate }}</span>
@@ -329,7 +331,9 @@
         <!-- Footer -->
         <div class="card-footer mb-2 mb-lg-0 rounded-2 border py-0 mt-3">
           <div class="row">
-            <div class="col-6" *ngIf="product.nameEn">
+            <!-- <div class="col-6" *ngIf="product.nameEn"> -->
+              <div class="col-6" *ngIf="product.id == -1">
+
               <div
                 class="d-flex align-items-center justify-content-center border-end py-2">
                 <span class="fs-verySmall pe-2">{{ 'More' | translate }}</span>
