--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -11,11 +11,11 @@
            <ng-content #name></ng-content>
           </span>
           <div class="input-group" *ngIf="InputComponentData.inputGroup">
-            <input [type]="InputComponentData.type"  class="form-control border border-end-0" [placeholder]="InputComponentData.placeholder|translate"
-            [readonly]="InputComponentData.readonly"  [id]=InputComponentData.id  aria-describedby="basic-addon2" (focus)="InputComponentData.enableFocusBlurTracking ? onFocus($event) : null"  #inputRef2>
+            <input autocomplete="off"  [type]="InputComponentData.type"  class="form-control border border-end-0" [placeholder]="InputComponentData.placeholder|translate"
+            [readonly]="InputComponentData.readonly"  [id]=InputComponentData.id  (focus)="InputComponentData.enableFocusBlurTracking ? onFocus($event) : null"  #inputRef2>
              <span class="input-group-text  py-0 px-2  fs-verySmall" id="basic-addon2" [innerHTML]="InputComponentData.spanLabel | translate" (click)="handleClick($event)"></span>
           </div>
-         <input *ngIf="!InputComponentData.inputGroup" [type]="InputComponentData.type" class="form-control form-control-sm rounded-1" [id]=InputComponentData.id
+         <input autocomplete="off"  *ngIf="!InputComponentData.inputGroup" [type]="InputComponentData.type" class="form-control form-control-sm rounded-1" [id]=InputComponentData.id
          [readonly]="InputComponentData.readonly"   [placeholder]="InputComponentData.placeholder | translate"
          (blur)="InputComponentData.enableFocusBlurTracking ? onBlur($event) : null"   (focus)="InputComponentData.enableFocusBlurTracking ? onFocus($event) : null"  #inputRef
          />
