--- a/src/app/shared/components/layout-header/layout-header.component.html
+++ b/src/app/shared/components/layout-header/layout-header.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-12 col-lg-7 col-xl-5">
     <div class="input-group">
-      <input type="text" class="form-control" [placeholder]="selectionMessage" [(ngModel)]="searchKey">
+      <input type="text" class="form-control" [placeholder]="selectionMessage | translate" [(ngModel)]="searchKey">
 
       <div class="btn-group">
         <button type="button" class="btn btn-outline-semi-light fs-verySmall rounded-0 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
