--- a/src/app/shared/components/layout-header/layout-header.component.scss
+++ b/src/app/shared/components/layout-header/layout-header.component.scss
@@ -4,7 +4,7 @@ background-color: $semi-dark;
 color:$semi-light
 }
 .btn-outline-semi-light{
-  border:.5px solid $semi-dark;
+  border:.5px solid $outline-color;
   color:$semi-dark
 }
 .icon-circle {
@@ -18,3 +18,4 @@ color:$semi-light
   background-color: transparent;
   color: $semi-dark;
 }
+
