--- a/src/app/shared/components/page-controls/page-controls.component.html
+++ b/src/app/shared/components/page-controls/page-controls.component.html
@@ -13,12 +13,12 @@
   <nav aria-label="breadcrumb" class="d-inline-block ps-2">
     <ol class="breadcrumb rounded-3 m-0 py-2">
       <li class="breadcrumb-item small">
-        <i class="fa-solid fa-house pe-1 text-muted"></i>
-        <a [routerLink]="['/Orders/create']"  routerLinkActive="router-link-active" class="text-decoration-none text-muted">
+        <i class="fa-solid fa-house pe-1 text-breadcrumb"></i>
+        <a [routerLink]="['/Orders/create']"  routerLinkActive="router-link-active" class="text-decoration-none text-breadcrumb">
           {{"Home" | translate}}
         </a>
       </li>
-      <li class="breadcrumb-item active text-secondary small" aria-current="page">
+      <li class="breadcrumb-item active text-breadcrumb-secondary small" aria-current="page">
         {{ (PageControlsComponentData.type !== 'category'
           ? (PageControlsComponentData.type + 's')
           : 'categories') | translate | titlecase }}
@@ -34,14 +34,14 @@
 
       <div class="d-flex align-items-center justify-content-center" *ngIf="PageControlsComponentData.type != 'category' && PageControlsComponentData.type != 'variant' && PageControlsComponentData.type != 'variant Type' ">
           <div class="d-flex align-items-center justify-content-between pe-3" (click)="showFilterOptions()">
-            <i class="fa-solid fa-filter pe-2 text-muted"></i>
-            <span class="fw-light">{{"Filter" | translate}}</span>
+            <i class="fa-solid fa-filter pe-2 text-icon-muted"></i>
+            <span class="fw-light text-icon-muted">{{"Filter" | translate}}</span>
           </div>
 
 
           <div class="position-relative pe-3" (click)="toggleDropdown()" *ngIf="PageControlsComponentData.servicesList.length >0">
-            <i class="fa-solid fa-server pe-2 text-muted"></i>
-            <span class="fw-light">{{ 'Services' | translate }}</span>
+            <i class="fa-solid fa-server pe-2 text-icon-muted"></i>
+            <span class="fw-light text-icon-muted">{{ 'Services' | translate }}</span>
 
             <div *ngIf="dropdownVisible" class="dropdown-menu show position-absolute mt-2 shadow-sm"
                  style="z-index: 1000;">
@@ -55,8 +55,8 @@
             </div>
           </div>
           <div class="d-flex align-items-center justify-content-between"  *ngIf="PageControlsComponentData.type != 'customer'">
-            <i class="fa-solid fa-table-cells-large pe-3 text-muted" (click)="setDisplayDir('catalog')"></i>
-            <i class="fa-solid fa-list text-muted" (click)="setDisplayDir('list')"></i>
+            <i class="fa-solid fa-table-cells-large pe-3 text-icon-muted" (click)="setDisplayDir('catalog')"></i>
+            <i class="fa-solid fa-list text-icon-muted" (click)="setDisplayDir('list')"></i>
           </div>
       </div>
   </div>
